--- a/colibre/config.yml
+++ b/colibre/config.yml
@@ -92,6 +92,11 @@ scripts:
     title: Stellar Birth Densities
     section: Stellar Birth Densities
     output_file: birth_density_distribution.png
+  - filename: scripts/birth_pressure_distribution.py
+    caption: Distributions of stellar birth pressures, split by redshift. The y axis shows the number of stars per bin divided by the bin width and by the total number of stars. The dashed vertical lines show the median stellar birth-pressures.
+    title: Stellar Birth Pressures
+    section: Stellar Birth Densities
+    output_file: birth_pressure_distribution.png
   - filename: scripts/birth_density_metallicity.py
     caption: Stellar birth densities vs metallicity diagram. The pixel colour indicates the number of stellar particles in the pixel. At a given birth density, particles with metallicities lower than the smallest value along the Y axis are placed in the lowest-metallicity bin.
     title: Stellar Birth Densities-Metallicity
